various updates and fixes

--- a/resource/README.html
+++ b/resource/README.html
@@ -16,7 +16,7 @@
 <h3>Artificial Life using MaDKit</h3>
 by Fabien Michel<br>
 <br>
-<a href="$%7Bturtlekit.web%7D/">www.turtlekit.org</a><br>
+<a href="${turtlekit.web}/">www.turtlekit.org</a><br>
 <br>
 <span style="font-style: italic;">${TODAY}</span><br>
 <br>
@@ -33,7 +33,7 @@ TurtleKit is free software, licensed under the GNU GPL, featuring:<br>
   <li>Artificial agents creation and life cycle management.</li>
   <li>An organizational infrastructure for communication between agents
 (MaDKit feature).</li>
-  <li>Fast Multi-Agent Based Simulation and simulator authoring tools.</li>
+  <li>Multi-Agent Based Simulation and simulator authoring tools.</li>
   <li>GPGPU only for Linux users for now<br>
   </li>
 </ul>
@@ -52,21 +52,21 @@ programming interface<br>
   </li>
 </ul>
 <ul>
-  <li>A <big><a href="$%7Bdocs.dir%7D/build.xml"><span
+  <li>A <big><a href="docs/build.xml"><span
  style="font-weight: bold;">build.xml</span></a></big>
 ant file for easing the development and deployment of TurtleKit
 projects.</li>
 </ul>
 <ul>
   <li>TurtleKit classes <big style="font-weight: bold;"><a
- href="$%7Bsrc.zip.location%7D">java source
+ href="${src.zip.location}">java source
 code</a></big> as a zip file. It could be used to attach source in an
 IDE for easing the development.</li>
 </ul>
 <ul>
   <li>The complete <big style="font-weight: bold;"><a
  href="https://github.com/fmichel/TurtleKit">TurtleKit development
-tree</a></big> is available on github.</li>
+tree</a></big> is available on GitHub.</li>
 </ul>
 <br>
 <br>
@@ -136,7 +136,7 @@ turtlekit.kernel.TurtleKit class<br>
 <h3>
 </h3>
 <ul>
-  <li><a href="$%7Bmadkit.web%7D/forum">MaDKit forum</a></li>
+  <li><a href="${madkit.web}/forum">MaDKit forum</a></li>
 </ul>
 <br>
 <hr>
